# Python

./: README.md
Python-05/ex0/: stream_processor.py
Python-05/ex1/: data_stream.py
Python-05/ex2/: nexus_pipeline.py
Python-06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python-06/alchemy/: __init__.py  potions.py
Python-06/alchemy/grimoire/: spellbook.py  validator.py
Python-06/alchemy/transmutation/: advanced.py  basic.py
Python-07/ex0/: Card.py  CreatureCard.py  __init__.py  main.py
Python-07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  __init__.py  main.py
Python-07/ex2/: Combatable.py  EliteCard.py  Magical.py  __init__.py  main.py
Python-07/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  __init__.py  main.py
Python-07/ex4/: TournamentCard.py  TournamentPlatform.py  main.py
Python-08/ex0/: construct.py
Python-08/ex01/: loading.py  pyproject.toml  requirements.txt
Python-08/ex02/: .env.example  oracle.py
Python-09/: test.py
Python-09/ex0/: space_station.py
Python-09/ex1/: alien_contact.py
Python-09/ex2/: space_crew.py
Python-10/ex0/: lambda_spells.py
Python-10/ex1/: higher_magic.py
Python-10/ex2/: scope_mysteries.py
Python-10/ex3/: functools_artifacts.py
Python-10/ex4/: decorator_mastery.py
