[tool.poetry]
package-mode = false
name = "loading-program"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["lsebar"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
numpy = "^1.24"
requests = "^2.31"
matplotlib = "^3.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
